description = 'kafka-connect-rest-source'

subprojects {
    ext {
        kafkaVersion = '2.5.0'
        confluentVersion = '5.5.0'
        jacksonVersion = '2.11.0'
    }

    apply plugin: 'java'
    apply plugin: 'java-library'

    group = 'org.radarbase'
    version = '0.3.1'

    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    repositories {
        mavenCentral()
        maven { url "https://packages.confluent.io/maven/" }
        maven { url "https://repo.maven.apache.org/maven2" }
        jcenter()
        maven { url  "https://dl.bintray.com/radar-cns/org.radarcns" }
        maven { url  'https://oss.jfrog.org/artifactory/oss-snapshot-local/' }
    }
}

wrapper {
    gradleVersion '6.4.1'
}

evaluationDependsOnChildren()

task downloadDependencies {
    subprojects.collect {
        it.configurations.runtimeClasspath.files
        it.configurations.compileClasspath.files
    }

    doLast {
        println 'Downloaded REST code dependencies'
    }
}
